# noise

./: .gitignore  Cargo.toml  README.md
.github/workflows/: client-windows.yml  relay-packages.yml
apps/client/: .env.example  index.html  package.json  pnpm-lock.yaml
apps/client/src/: App.tsx  ReactionPicker.tsx  api.ts  groupAvatar.ts  main.tsx  styles.css  types.ts  webVault.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: main.rs
apps/macos/: project.yml
apps/macos/Noise/: AppModel.swift  ContentView.swift  Models.swift  NoiseApp.swift  NoiseBridge.swift
apps/macos/Noise.xcodeproj/: project.pbxproj
apps/macos/Noise/Bridge/: Noise-Bridging-Header.h
apps/marketing/: index.html  package.json  pnpm-lock.yaml  src.js  style.css  vite.config.js
apps/marketing/privacy/: index.html
apps/marketing/terms/: index.html
crates/noise-cli/: Cargo.toml
crates/noise-cli/src/: main.rs
crates/noise-client/: Cargo.toml
crates/noise-client/src/: lib.rs  relay_pool.rs
crates/noise-core/: Cargo.toml
crates/noise-core/src/: lib.rs  production_e2ee.rs
crates/noise-ffi/: Cargo.toml
crates/noise-ffi/src/: lib.rs
crates/noise-relay/: Cargo.toml
crates/noise-relay/src/: config.rs  discovery.rs  identity.rs  main.rs  privacy.rs  shard_store.rs  store.rs  update.rs
crates/noise-sim/: Cargo.toml
crates/noise-sim/src/: main.rs
crates/noise-transport/: Cargo.toml
crates/noise-transport/src/: lib.rs
crates/noise-web/: Cargo.toml
crates/noise-web/src/: lib.rs
deploy/: noise-relay.toml.example  relay-release-public.pem  storage.env.example
deploy/nginx/: app.makenoise.chat.conf  app.makenoise.chat.http.conf  makenoise.chat.conf  noiserelay.bootstrap.conf  noiserelay.gnosyslabs.xyz  noiserelay.irisirc.chat  noiserelay.irisirc.chat.bootstrap.conf
deploy/relay-channels/: README.md  stable.json  stable.json.sig
deploy/systemd/: noise-relay-i2p.service  noise-relay-update.service  noise-relay-update.timer  noise-relay.service
docs/: BENCHMARKS.md  CLIENTS.md  PRODUCTION-E2EE.md  PROTOCOL.md  RELAY_RELEASES.md
scripts/: build-web-client.sh  package-relay-deb.sh  promote-relay-release.sh  release-macos.sh
