[workspace]
members = [
    "apps/client/src-tauri",
    "crates/noise-core",
    "crates/noise-client",
    "crates/noise-ffi",
    "crates/noise-relay",
    "crates/noise-cli",
    "crates/noise-sim",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
