[workspace]
members = [
    "apps/client/src-tauri",
    "crates/noise-core",
    "crates/noise-client",
    "crates/noise-transport",
    "crates/noise-ffi",
    "crates/noise-web",
    "crates/noise-relay",
    "crates/noise-cli",
    "crates/noise-sim",
]
resolver = "2"

[workspace.package]
version = "0.1.8"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
bhttp = "0.8"
blake3 = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = "2"
futures-util = "0.3"
js-sys = "0.3"
ohttp = { version = "0.8", default-features = false, features = ["client", "server", "rust-hpke"] }
object_store = { version = "0.14.1", features = ["aws"] }
openmls = { version = "=0.8.1", default-features = false, features = ["js"] }
openmls_basic_credential = { version = "=0.5.0", features = ["clonable"] }
openmls_memory_storage = "=0.5.0"
openmls_rust_crypto = "=0.5.1"
openmls_traits = "=0.5.0"
rand = "0.9"
reed-solomon-erasure = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
turso = { version = "0.8.0-pre.1", default-features = false }
unicode-segmentation = "1"
url = "2"
