[package]
name = "noise-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
noise-core = { path = "../noise-core" }
noise-transport = { path = "../noise-transport" }
ohttp.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
