[package]
name = "noise-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
futures-util.workspace = true
futures-timer.workspace = true
noise-core = { path = "../noise-core" }
noise-transport = { path = "../noise-transport" }
ohttp.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom-04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
js-sys.workspace = true
