[package]
name = "noise-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
