[package]
name = "noise-core"
version.workspace = true
edition.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
openmls.workspace = true
openmls_basic_credential.workspace = true
openmls_memory_storage.workspace = true
openmls_rust_crypto.workspace = true
openmls_traits.workspace = true
rand.workspace = true
reed-solomon-erasure.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom-02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom-03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys.workspace = true
