[package]
name = "noise-relay"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
noise-core = { path = "../noise-core" }
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
