[package]
name = "noise-relay"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
noise-core = { path = "../noise-core" }
noise-transport = { path = "../noise-transport" }
ohttp.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
turso.workspace = true
url.workspace = true
