[package]
name = "noise-relay"
version = "0.1.1"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
blake3.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
noise-core = { path = "../noise-core" }
noise-transport = { path = "../noise-transport" }
ohttp.workspace = true
object_store.workspace = true
rand.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
turso.workspace = true
url.workspace = true
