[package]
name = "noise-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
noise-ffi = { path = "../../../crates/noise-ffi" }
serde_json.workspace = true
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
